--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.10.6",
