--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "portfolio",
   "version": "0.1.0",
   "engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "npm": "9.x"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
